--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,60 @@ layout: default
 
   <hr class="separator">
 
+  <ul class="skills">
+    <li class="skills__item">
+      <div class="skills__logo icon-html"></div>
+      <div class="skills__info">
+        <p class="skills__name">HTML5</p>
+        <p class="skills__desc">I create clean, semantic and re-usable UI components following W3C standards that remain easily maintainable by development teams.</p>
+        <progress class="skills__progress-bar" max="100" value="97">
+          <div class="skills__progress-bar--old">
+            <span style="width: 98%">98%</span>
+          </div>
+        </progress>
+      </div>
+    </li>
+
+    <li class="skills__item">
+      <div class="skills__logo icon-css"></div>
+      <div class="skills__info">
+        <p class="skills__name">CSS3</p>
+        <p class="skills__desc">Scalability, maintainability and performance are my main focus when developing CSS styles. I use BEM and OOCSS as the foundation for projects of all sizes.</p>
+        <progress class="skills__progress-bar" max="100" value="96">
+          <div class="skills__progress-bar--old">
+            <span style="width: 96%">96%</span>
+          </div>
+        </progress>
+      </div>
+    </li>
+
+    <li class="skills__item">
+      <div class="skills__logo icon-js"></div>
+      <div class="skills__info">
+        <p class="skills__name">Javascript</p>
+        <p class="skills__desc">Experience using Javascript, jQuery and knowledge of multiple JS design pattern to keep code modular.</p>
+        <progress class="skills__progress-bar" max="100" value="85">
+          <div class="skills__progress-bar--old">
+            <span style="width: 85%">85%</span>
+          </div>
+        </progress>
+      </div>
+    </li>
+
+    <li class="skills__item">
+      <div class="skills__logo icon-mobile"></div>
+      <div class="skills__info">
+        <p class="skills__name">Responsive Design</p>
+        <p class="skills__desc">I develop user-friendly responsive UIs using mobile-first and progressive enhancement. I always put great emphasis on performance.</p>
+        <progress class="skills__progress-bar" max="100" value="95">
+          <div class="skills__progress-bar--old">
+            <span style="width: 95%">95%</span>
+          </div>
+        </progress>
+      </div>
+    </li>
+  </ul>
+
   <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 
   <ol>
