--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,15 @@ layout: default
 
 <div class="home">
 
-  <h1>Hi.</h1>
+  <h1 id="about">Hi.</h1>
   <h2>I'm Pierre Luc Nichols</h2>
   <h3>Front End Developer</h3>
   <h4>currently contracting in London, UK.</h4>
 
   <hr class="separator">
+
+  <h2 id="skills">Skills</h2>
+  <h3>Here's an overview of the technologies I'm particularly good</h3>
 
   <ul class="skills">
     <li class="skills__item">
@@ -65,26 +68,12 @@ layout: default
     </li>
   </ul>
 
-  <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+  <hr class="separator">
 
-  <ol>
-     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-     <li>Aliquam tincidunt mauris eu risus.</li>
-  </ol>
-
-  <blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
-
-  <ul>
-     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-     <li>Aliquam tincidunt mauris eu risus.</li>
-  </ul>
-
-  <pre><code>
-  #header h1 a { 
-    display: block; 
-    width: 300px; 
-    height: 80px; 
-  }
-  </code></pre>
+  <h2 id="letstalk">Let's talk!</h2>
+  <h3>I'm currently available for contract</h3>
+  <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com" target="_blank">email me</a>
+  
+  </form>
 
 </div>
