--- a/app/index.html
+++ b/app/index.html
@@ -70,10 +70,10 @@ layout: default
 
   <hr class="separator">
 
-  <h2 id="letstalk">Let's talk!</h2>
+  <h2 id="contact">Let's talk!</h2>
   <h3>I'm currently available for contract</h3>
   <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com" target="_blank">email me</a>
-  
+
   </form>
 
 </div>
