--- a/app/index.html
+++ b/app/index.html
@@ -4,75 +4,137 @@ layout: default
 
 <div class="home">
 
-  <h1 id="about">Hi.</h1>
-  <h2>I'm Pierre Luc Nichols</h2>
-  <h3>Front End Developer</h3>
-  <h4>currently contracting in London, UK.</h4>
+  <div class="about">
+    <h1 id="about">Hi.</h1>
+    <h2>I'm Pierre Luc Nichols</h2>
+    <h3>Front End Developer</h3>
+    <h4>London, UK</h4>
+  </div>
+
 
   <hr class="separator">
 
-  <h2 id="skills">Skills</h2>
-  <h3>Here's an overview of the technologies I'm particularly good</h3>
 
-  <ul class="skills">
-    <li class="skills__item">
-      <div class="skills__logo icon-html"></div>
-      <div class="skills__info">
-        <p class="skills__name">HTML5</p>
-        <p class="skills__desc">I create clean, semantic and re-usable UI components following W3C standards that remain easily maintainable by development teams.</p>
-        <progress class="skills__progress-bar" max="100" value="97">
-          <div class="skills__progress-bar--old">
-            <span style="width: 98%">98%</span>
-          </div>
-        </progress>
-      </div>
-    </li>
+  <div class="skills">
+    <h2 id="skills">Skills</h2>
+    <h3>Here's an overview of the technologies I'm particularly good at:</h3>
 
-    <li class="skills__item">
-      <div class="skills__logo icon-css"></div>
-      <div class="skills__info">
-        <p class="skills__name">CSS3</p>
-        <p class="skills__desc">Scalability, maintainability and performance are my main focus when developing CSS styles. I use BEM and OOCSS as the foundation for projects of all sizes.</p>
-        <progress class="skills__progress-bar" max="100" value="96">
-          <div class="skills__progress-bar--old">
-            <span style="width: 96%">96%</span>
-          </div>
-        </progress>
-      </div>
-    </li>
+    <ul class="skills__list">
+      <li class="skills__item">
+        <div class="skills__logo icon-html"></div>
+        <div class="skills__info">
+          <p class="skills__name">HTML5</p>
+          <p class="skills__desc">I create clean, semantic and re-usable UI components following W3C standards that remain easily maintainable by development teams.</p>
+          <progress class="skills__progress-bar" max="100" value="97">
+            <div class="skills__progress-bar--old">
+              <span style="width: 98%">98%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
 
-    <li class="skills__item">
-      <div class="skills__logo icon-js"></div>
-      <div class="skills__info">
-        <p class="skills__name">Javascript</p>
-        <p class="skills__desc">Experience using Javascript, jQuery and knowledge of multiple JS design pattern to keep code modular.</p>
-        <progress class="skills__progress-bar" max="100" value="85">
-          <div class="skills__progress-bar--old">
-            <span style="width: 85%">85%</span>
-          </div>
-        </progress>
-      </div>
-    </li>
+      <li class="skills__item">
+        <div class="skills__logo icon-css"></div>
+        <div class="skills__info">
+          <p class="skills__name">CSS3</p>
+          <p class="skills__desc">Scalability, maintainability and performance are my main focus when developing CSS styles. I use BEM and OOCSS as the foundation for projects of all sizes.</p>
+          <progress class="skills__progress-bar" max="100" value="96">
+            <div class="skills__progress-bar--old">
+              <span style="width: 96%">96%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
 
-    <li class="skills__item">
-      <div class="skills__logo icon-mobile"></div>
-      <div class="skills__info">
-        <p class="skills__name">Responsive Design</p>
-        <p class="skills__desc">I develop user-friendly responsive UIs using mobile-first and progressive enhancement. I always put great emphasis on performance.</p>
-        <progress class="skills__progress-bar" max="100" value="95">
-          <div class="skills__progress-bar--old">
-            <span style="width: 95%">95%</span>
-          </div>
-        </progress>
-      </div>
-    </li>
-  </ul>
+      <li class="skills__item">
+        <div class="skills__logo icon-mobile"></div>
+        <div class="skills__info">
+          <p class="skills__name">Responsive Design</p>
+          <p class="skills__desc">I develop user-friendly responsive UIs using mobile-first and progressive enhancement. I always put great emphasis on performance.</p>
+          <progress class="skills__progress-bar" max="100" value="95">
+            <div class="skills__progress-bar--old">
+              <span style="width: 95%">95%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-sass"></div>
+        <div class="skills__info">
+          <p class="skills__name">Sass</p>
+          <p class="skills__desc">In depth knowledge of Sass features (and the pitfalls to avoid with pre-processors) and experience creating functions and mixins to streamline development. I also know Less!</p>
+          <progress class="skills__progress-bar" max="100" value="93">
+            <div class="skills__progress-bar--old">
+              <span style="width: 93%">93%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-js"></div>
+        <div class="skills__info">
+          <p class="skills__name">Javascript</p>
+          <p class="skills__desc">Experience using plain Javascript and jQuery plus knowledge of multiple JS design pattern to keep code DRY and modular.</p>
+          <progress class="skills__progress-bar" max="100" value="85">
+            <div class="skills__progress-bar--old">
+              <span style="width: 85%">75%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-angular"></div>
+        <div class="skills__info">
+          <p class="skills__name">AngularJS</p>
+          <p class="skills__desc">Not an expert yet, but I do have commercial experience building interactive UIs with AngularJS and unit testing using Jasmine and Karma.</p>
+          <progress class="skills__progress-bar" max="100" value="65">
+            <div class="skills__progress-bar--old">
+              <span style="width: 65%">65%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-grunt"></div>
+        <div class="skills__info">
+          <p class="skills__name">Grunt</p>
+          <p class="skills__desc">Grunt (or Gulp) is the perfect tool to automate the build process and help with development and testing tasks.</p>
+          <progress class="skills__progress-bar" max="100" value="80">
+            <div class="skills__progress-bar--old">
+              <span style="width: 80%">80%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-git"></div>
+        <div class="skills__info">
+          <p class="skills__name">Git</p>
+          <p class="skills__desc">I've been using Git for almost 2 years and I've never looked back! I'm familiar with popular <a href="http://nvie.com/posts/a-successful-git-branching-model/" target="_blank">branching model</a>, merging, rebasing, etc.</p>
+          <progress class="skills__progress-bar" max="100" value="85">
+            <div class="skills__progress-bar--old">
+              <span style="width: 85%">85%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+    </ul>
+  </div>
+
 
   <hr class="separator">
 
-  <h2 id="contact">Let's talk!</h2>
-  <h3>I'm currently available for contract</h3>
-  <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com" target="_blank">email me</a>
+
+  <div class="contact">
+    <h2 id="contact">Let's talk!</h2>
+    <h3>I'm currently available for contract</h3>
+    <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com" target="_blank">email me</a>
+  </div>
 
   </form>
 
