Remove email link target and update Grunt text

--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@ layout: default
         <div class="skills__logo icon-grunt"></div>
         <div class="skills__info">
           <p class="skills__name">Grunt</p>
-          <p class="skills__desc">Grunt (or Gulp) is the perfect tool to automate the build process and help with development and testing tasks.</p>
+          <p class="skills__desc">I've been using Grunt (and/or Gulp) in all my recent projects. It's the perfect tool to automate build process and development tasks.</p>
           <progress class="skills__progress-bar" max="100" value="80">
             <div class="skills__progress-bar--old">
               <span style="width: 80%">80%</span>
@@ -133,7 +133,7 @@ layout: default
   <div class="contact">
     <h2 id="contact">Let's talk!</h2>
     <h3>I'm currently available for contract</h3>
-    <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com" target="_blank">email me</a>
+    <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com">email me</a>
   </div>
 
   </form>
