--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  <div class="about">
-    <h1 id="about">Hi.</h1>
+  <div class="about" id="about">
+    <h1>Hi.</h1>
     <h2>I'm Pierre Luc Nichols</h2>
     <h3>Front End Developer</h3>
     <h4>London, UK</h4>
@@ -15,8 +15,8 @@ layout: default
   <hr class="separator">
 
 
-  <div class="skills">
-    <h2 id="skills">Skills</h2>
+  <div class="skills" id="skills">
+    <h2>Skills</h2>
     <h3>Here's an overview of the technologies I'm particularly good at:</h3>
 
     <ul class="skills__list">
@@ -73,32 +73,6 @@ layout: default
       </li>
 
       <li class="skills__item">
-        <div class="skills__logo icon-js"></div>
-        <div class="skills__info">
-          <p class="skills__name">Javascript</p>
-          <p class="skills__desc">Experience using plain Javascript and jQuery plus knowledge of multiple JS design pattern to keep code DRY and modular.</p>
-          <progress class="skills__progress-bar" max="100" value="85">
-            <div class="skills__progress-bar--old">
-              <span style="width: 85%">75%</span>
-            </div>
-          </progress>
-        </div>
-      </li>
-
-      <li class="skills__item">
-        <div class="skills__logo icon-angular"></div>
-        <div class="skills__info">
-          <p class="skills__name">AngularJS</p>
-          <p class="skills__desc">Not an expert yet, but I do have commercial experience building interactive UIs with AngularJS and unit testing using Jasmine and Karma.</p>
-          <progress class="skills__progress-bar" max="100" value="65">
-            <div class="skills__progress-bar--old">
-              <span style="width: 65%">65%</span>
-            </div>
-          </progress>
-        </div>
-      </li>
-
-      <li class="skills__item">
         <div class="skills__logo icon-grunt"></div>
         <div class="skills__info">
           <p class="skills__name">Grunt</p>
@@ -123,6 +97,32 @@ layout: default
           </progress>
         </div>
       </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-js"></div>
+        <div class="skills__info">
+          <p class="skills__name">Javascript</p>
+          <p class="skills__desc">Experience using plain Javascript (DRY and modular) and jQuery to enhance the user experience.</p>
+          <progress class="skills__progress-bar" max="100" value="75">
+            <div class="skills__progress-bar--old">
+              <span style="width: 75%">75%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-angular"></div>
+        <div class="skills__info">
+          <p class="skills__name">AngularJS</p>
+          <p class="skills__desc">Not an expert yet, but I do have commercial experience building interactive UIs with AngularJS and unit testing using Jasmine and Karma.</p>
+          <progress class="skills__progress-bar" max="100" value="65">
+            <div class="skills__progress-bar--old">
+              <span style="width: 65%">65%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
     </ul>
   </div>
 
@@ -130,10 +130,10 @@ layout: default
   <hr class="separator">
 
 
-  <div class="contact">
-    <h2 id="contact">Let's talk!</h2>
-    <h3>I'm currently available for contract</h3>
-    <a class="button button-primary" href="mailto:pierrelucnichols@gmail.com">email me</a>
+  <div class="contact" id="contact">
+    <h2 class="contact__title">Let's talk!</h2>
+    <h3 class="contact__subtitle">I'm currently available for contract</h3>
+    <a class="button button-primary contact__btn" href="mailto:pierrelucnichols@gmail.com">email me</a>
   </div>
 
   </form>
