--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@ layout: default
         <div class="skills__logo icon-sass"></div>
         <div class="skills__info">
           <p class="skills__name">Sass</p>
-          <p class="skills__desc">In depth knowledge of Sass features (and the pitfalls to avoid with pre-processors) and experience creating functions and mixins to streamline development. I also know Less!</p>
+          <p class="skills__desc">In depth knowledge of Sass features (and the pitfalls to avoid with pre-processors) and experience creating functions and mixins to streamline development. And I also know Less!</p>
           <progress class="skills__progress-bar" max="100" value="93">
             <div class="skills__progress-bar--old">
               <span style="width: 93%">93%</span>
@@ -73,36 +73,10 @@ layout: default
       </li>
 
       <li class="skills__item">
-        <div class="skills__logo icon-grunt"></div>
-        <div class="skills__info">
-          <p class="skills__name">Grunt</p>
-          <p class="skills__desc">I've been using Grunt (and/or Gulp) in all my recent projects. It's the perfect tool to automate build process and development tasks.</p>
-          <progress class="skills__progress-bar" max="100" value="80">
-            <div class="skills__progress-bar--old">
-              <span style="width: 80%">80%</span>
-            </div>
-          </progress>
-        </div>
-      </li>
-
-      <li class="skills__item">
-        <div class="skills__logo icon-git"></div>
-        <div class="skills__info">
-          <p class="skills__name">Git</p>
-          <p class="skills__desc">I've been using Git for almost 2 years and I've never looked back! I'm familiar with popular <a href="http://nvie.com/posts/a-successful-git-branching-model/" target="_blank">branching model</a>, merging, rebasing, etc.</p>
-          <progress class="skills__progress-bar" max="100" value="85">
-            <div class="skills__progress-bar--old">
-              <span style="width: 85%">85%</span>
-            </div>
-          </progress>
-        </div>
-      </li>
-
-      <li class="skills__item">
         <div class="skills__logo icon-js"></div>
         <div class="skills__info">
           <p class="skills__name">Javascript</p>
-          <p class="skills__desc">Experience using plain Javascript (DRY and modular) and jQuery to enhance the user experience.</p>
+          <p class="skills__desc">Experience using plain Javascript (DRY and modular) and popular javascript libraries and frameworks like jQuery, Underscore, Lodash, Backbone to enhance user experience.</p>
           <progress class="skills__progress-bar" max="100" value="75">
             <div class="skills__progress-bar--old">
               <span style="width: 75%">75%</span>
@@ -115,10 +89,36 @@ layout: default
         <div class="skills__logo icon-angular"></div>
         <div class="skills__info">
           <p class="skills__name">AngularJS</p>
-          <p class="skills__desc">Not an expert yet, but I do have commercial experience building interactive UIs with AngularJS and unit testing using Jasmine and Karma.</p>
-          <progress class="skills__progress-bar" max="100" value="65">
+          <p class="skills__desc">Over 2 years of commercial experience on projects of all sizes. From small interactive widgets to more complex data-driven Single Page Applications. Also some unit testing using Jasmine and Karma.</p>
+          <progress class="skills__progress-bar" max="100" value="80">
             <div class="skills__progress-bar--old">
-              <span style="width: 65%">65%</span>
+              <span style="width: 80%">80%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-git"></div>
+        <div class="skills__info">
+          <p class="skills__name">Git</p>
+          <p class="skills__desc">I've been using Git for a few years now and I've never looked back! I'm familiar with popular <a href="http://nvie.com/posts/a-successful-git-branching-model/" target="_blank">branching model</a>, merging, rebasing, etc.</p>
+          <progress class="skills__progress-bar" max="100" value="85">
+            <div class="skills__progress-bar--old">
+              <span style="width: 85%">85%</span>
+            </div>
+          </progress>
+        </div>
+      </li>
+
+      <li class="skills__item">
+        <div class="skills__logo icon-grunt"></div>
+        <div class="skills__info">
+          <p class="skills__name">Grunt / Gulp / npm</p>
+          <p class="skills__desc">I've been using Grunt, Gulp and npm in all my recent projects. The perfect tools to automate build process and repetitive development tasks.</p>
+          <progress class="skills__progress-bar" max="100" value="80">
+            <div class="skills__progress-bar--old">
+              <span style="width: 80%">80%</span>
             </div>
           </progress>
         </div>
@@ -132,7 +132,7 @@ layout: default
 
   <div class="contact" id="contact">
     <h2 class="contact__title">Let's talk!</h2>
-    <h3 class="contact__subtitle">I'm currently available for contract</h3>
+    <h3 class="contact__subtitle">Get in touch to enquire about my availability</h3>
     <a class="button button-primary contact__btn" href="mailto:pierrelucnichols@gmail.com">email me</a>
   </div>
 
